# LyceanEM-Python

./: CMakeLists.txt  pyproject.toml  setup.py
.github/workflows/: conda_build.yml
actions/: upload.py
conda/: bld.bat  build.bat  meta.yaml
